// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Route) dashboard (Component) poll table header item (Render) doesn't have onSort callback matches snapshot 1`] = `
<th
  className={false}
  style={Object {}}
>
  <span>
    Column header
  </span>
</th>
`;

exports[`(Route) dashboard (Component) poll table header item (Render) has onSort callback has sortDirection asc matches snapshot 1`] = `
<th
  className="sort-active"
  style={Object {}}
>
  <a
    onClick={[Function]}
  >
    Column header
     
    <i
      className="fa fa-sort-up"
    />
  </a>
</th>
`;

exports[`(Route) dashboard (Component) poll table header item (Render) has onSort callback has sortDirection desc matches snapshot 1`] = `
<th
  className="sort-active"
  style={Object {}}
>
  <a
    onClick={[Function]}
  >
    Column header
     
    <i
      className="fa fa-sort-down"
    />
  </a>
</th>
`;

exports[`(Route) dashboard (Component) poll table header item (Render) has onSort callback matches snapshot 1`] = `
<th
  className={false}
  style={Object {}}
>
  <a
    onClick={[Function]}
  >
    Column header
     
    <i
      className="fa fa-sort"
    />
  </a>
</th>
`;
